<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/menu"
        android:layout_gravity="start"
        app:itemIconSize="25dp"
        app:itemIconTint="#008080"
        app:itemTextColor="#008080"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/header_background">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toolbar"
                    android:minHeight="?actionBarSize"
                    android:theme="?actionBarTheme"
                    app:navigationIcon="@drawable/ic_menu"/>

                <LinearLayout
                    android:id="@+id/layoutheader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:id="@+id/layoutheader2"
                        android:layout_width="match_parent"
                        android:layout_height="234dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        tools:ignore="UseCompoundDrawables">


                        <ImageView
                            android:id="@+id/girl"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="end"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/homebg">
                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:fontFamily="sans-serif-black"
                            android:letterSpacing="0.02"
                            android:text="@string/welcome_nback_nalice"
                            android:textColor="@color/white"
                            android:textSize="33sp"
                            android:textStyle="bold">

                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_rectangle_background"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/search_your_course"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:textStyle="bold"
                            android:textColor="#305f72"
                            android:textSize="17sp"
                            android:importantForAutofill="no"/>


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_search"
                            android:contentDescription="@string/app_name"
                            android:background="@drawable/search_icon_background"
                            android:padding="6dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="5dp"
                            app:tint="@color/light_pink1">
                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_rectangle_background"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:padding="20dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/the_expert_at_anything_nwas_a_once_a_beginner_n_helen_hayes"
                            android:textSize="20sp"
                            android:textColor="#305f72"
                            android:fontFamily="sans-serif-black"
                            android:letterSpacing="0.035">
                        </TextView>

                        <ImageView
                            android:layout_width="94dp"
                            android:layout_height="98dp"
                            android:layout_gravity="end"
                            android:src="@drawable/boy"
                            android:contentDescription="@string/app_name">
                        </ImageView>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textStyle="bold"
                    android:textColor="#305f72"
                    android:textSize="20sp"
                    android:letterSpacing="0.02"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp">
                </TextView>

                <RelativeLayout
                    android:id="@+id/cat1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c1"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        app:cardBackgroundColor="#fae4f4"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/img1"
                                android:src="@drawable/java_logo"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:background="#f18c8e"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="5dp"
                                android:contentDescription="@string/app_name">
                            </ImageView>

                            <LinearLayout
                                android:id="@+id/heading"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_toEndOf="@id/img1"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="25dp">

                                <TextView
                                    android:id="@+id/t1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/java_technology"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    android:textColor="#305f72"
                                    android:letterSpacing="0.03">
                                </TextView>

                                <TextView
                                    android:id="@+id/t2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/total_10_courses"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:textColor="#f18c8e"
                                    android:letterSpacing="0.03"
                                    >
                                </TextView>
                            </LinearLayout>

                            <Button
                                android:id="@+id/cloud_courses"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_toEndOf="@id/heading"
                                android:src="@drawable/ic_arrow_forward"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@string/app_name"
                                android:backgroundTint="#fae4f4"
                                android:textColor="@color/black">
                            </Button>
                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/cat2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c2"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        app:cardBackgroundColor="#fae4f4"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/img2"
                                android:src="@drawable/java_logo"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:background="#f18c8e"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="5dp"
                                android:contentDescription="@string/app_name">
                            </ImageView>

                            <LinearLayout
                                android:id="@+id/heading1"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_toEndOf="@id/img2"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="25dp">

                                <TextView
                                    android:id="@+id/text1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/python"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    android:textColor="#305f72"
                                    android:letterSpacing="0.03">
                                </TextView>

                                <TextView
                                    android:id="@+id/text2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/total_12_courses"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:textColor="#f18c8e"
                                    android:letterSpacing="0.03"
                                    >
                                </TextView>
                            </LinearLayout>

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_toEndOf="@id/heading1"
                                android:src="@drawable/ic_arrow_forward"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@string/app_name">
                            </ImageView>
                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>
                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>